--- a/app/src/main/res/layout/fragment_read.xml
+++ b/app/src/main/res/layout/fragment_read.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginBottom="@dimen/_50sdp"
+
     tools:context=".Fragments.ReadFragment">
 
 
